internal/gatewayapi/testdata/merge-valid-multiple-gateways-multiple-routes.in.yaml
envoyproxy:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    mergeGateways: true
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    name: gateway-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: http-2
        port: 8888
        protocol: HTTP
      - name: http-3
        hostname: example.com
        port: 8888
        protocol: HTTP
        allowedRoutes:
          namespaces:
            from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: AuthenticationFilter
          name: test
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    hostnames:
    - example.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-2
      sectionName: http-3
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-2
        port: 8080
authenticationFilters:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: AuthenticationFilter
  metadata:
    namespace: default
    name: test
  spec:
    type: JWT
    jwtProviders:
    - name: test
      issuer: https://www.test.local
      remoteJWKS:
        uri: https://test.local/jwt/public-key/jwks.json
